# FMAlign3

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  distance_matrix.txt  main.cpp  out.tree  start.sh  start2.sh  test_log.txt
.obsidian/: workspace.json
PSA/WFA2-lib/examples/: wfa_bindings.cpp  wfa_lambda.cpp
include/: GetDecenttree.h  bwt.cpp  bwt.h  center_align.h  cluster.h  decenttree  fcgr.h  fmindex.h  readfile.h  top.h
src/: GetDecentTree.cpp  align_seq.cpp  cluster.cpp  fcgr.cpp  fmindex.cpp  readfile.cpp
